fix menu visibility

--- a/res/_aside.scss
+++ b/res/_aside.scss
@@ -68,7 +68,8 @@ aside {
       margin-top: 0.5rem;
       margin-bottom: 0.5rem;
       li {
-        padding: 0.5rem;
+        // padding: 0.5rem;
+      padding: 0;
       }
       li.active {
         font-weight: bold;
@@ -79,7 +80,8 @@ aside {
       }
       a {
         display: block;
-        width: 100%;
+        width: calc(100% - 1rem);
+        padding: 0.5rem;
       }
     }
   }
